tests/fixtures/valid/multi/bare_import_instantiated/src/nasa/main.gcl
include nasa.rocket(dry_mass: 800.0 kg, fuel_mass: 3200.0 kg) as stage;

node dv: Velocity = @stage.delta_v;
