tests/fixtures/errors/datetime_conversion_non_datetime.gcl
param x: Dimensionless = 42.0;
node bad: Datetime = to_utc(@x);
